retrieveUnpackaged/objects/TQB_Comment__c.object
<CustomObject>
    <description>Stores the comments associated with fields and attachments in the CP.</description>
    <fields>
        <fullName>Comment_Type_ID__c</fullName>
        <description>Comment Type Unique ID</description>
        <inlineHelpText>Comment Type Unique ID</inlineHelpText>
        <label>Comment_Type_ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comment_Type__c</fullName>
        <label>Comment_Type</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comment__c</fullName>
        <description>A comment entered by a user and associated with a field in the CP.</description>
        <inlineHelpText>A comment entered by a user and associated with a field in the CP.</inlineHelpText>
        <label>Comment</label>
        <length>3840</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>First_Line_Sup_Ad_Hoc_Comment__c</fullName>
        <description>A first line supervisors comment regarding an Ad Hoc Reference.</description>
        <inlineHelpText>A first line supervisors comment regarding an Ad Hoc Reference.</inlineHelpText>
        <label>First Line Sup Ad Hoc Comment</label>
        <length>3840</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Second_Line_Sup_Ad_Hoc_Comment__c</fullName>
        <description>A second line supervisors comment regarding an Ad Hoc Reference.</description>
        <inlineHelpText>A second line supervisors comment regarding an Ad Hoc Reference.</inlineHelpText>
        <label>Second Line Supervisor Ad Hoc Comment</label>
        <length>3840</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>TQB_Candidate_Package_ID__c</fullName>
        <description>Links the CP with the comment fields for each field in the application that requires the ability for users to enter comments. (e.g. questions, attachments etc.)</description>
        <inlineHelpText>Links the CP with the comment fields for each field in the application that requires the ability for users to enter comments. (e.g. questions, attachments etc.)</inlineHelpText>
        <label>TQB_Candidate_Package_ID</label>
        <referenceTo>TQB_Candidate_Package__c</referenceTo>
        <relationshipName>Comments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>TQB Comment</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>Comment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>TQB_Comments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>